# deep-analysis-server

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  ROADMAP.md  alembic.ini  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.claude/: review-config.json  settings.json
.claude/agents/: self-reviewer.md
.claude/commands/: self-review.md
.claude/hooks/: check-review-passed.sh
.github/workflows/: ci.yml  release-docker.yml  release.yml
.pka/updates/: current.md
.pka/updates/archive/: 2026-04-24-0118-rollup.md  2026-04-24-1455-rollup.md  2026-04-25-1122-rollup.md  2026-04-25-codex-fixes-and-triage.md  2026-04-26-1455-pr3-round4-codex-address-complete.md  2026-04-26-pr3-round3-complete.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_cross_schema_grants.py
ci/: Caddyfile.ci  check-compose-paths.sh  docker-compose.ci.yml  smoke_e2e.sh  smoke_ui.sh
common/: __init__.py  agent_auth.py  events.py  jwt_verify.py  logging.py  metrics.py  pyproject.toml  redis_client.py  settings.py  token_utils.py
docs/: admin-bootstrap.md  agent-protocol.md  backup.md  deploy.md  events.md  migrations.md
docs/diagrams/: README.md  architecture.excalidraw  pyproject.toml  render.py  render_template.html
gateway/: Caddyfile
openapi/: README.md
services/analytics/: Dockerfile  README.md  pyproject.toml
services/analytics/analytics_service/: main.py
services/auth/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/auth/alembic/: env.py
services/auth/alembic/versions/: 001_auth_tables.py  002_reassign_admin_agents.py  003_server_settings.py  004_invite_tokens.py
services/auth/auth_service/: admin.py  bootstrap.py  db.py  deps.py  jwt_issue.py  keygen.py  main.py  models.py  passwords.py  registration.py  schemas.py  settings.py
services/auth/tests/: conftest.py  test_admin_auth.py  test_admin_endpoints.py  test_agent_heartbeat.py  test_agent_register.py  test_bootstrap.py  test_invites.py  test_jwt_issue.py  test_login.py  test_logout.py  test_me_endpoints.py  test_migration_002_reassign.py  test_models.py  test_password_change.py  test_passwords.py  test_refresh.py  test_registration_code.py  test_registration_mode.py  test_role_separation.py
services/gateway/: Dockerfile  README.md
services/ingest/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/ingest/alembic/: env.py
services/ingest/alembic/versions/: 001_ingest_tables.py
services/ingest/ingest_service/: db.py  deps.py  main.py  models.py  schemas.py  settings.py  storage.py
services/ingest/tests/: conftest.py  test_cross_schema_grants.py  test_models.py  test_storage.py  test_upload.py
services/parser/: Dockerfile  README.md  pyproject.toml
services/parser/parser_service/: main.py
services/web/: Dockerfile  README.md  pyproject.toml
services/web/tests/: conftest.py  test_admin_agents_routes.py  test_admin_invites_routes.py  test_admin_landing.py  test_admin_routes.py  test_admin_settings_routes.py  test_auth_client_admin.py  test_auth_client_self_service.py  test_auth_client_settings.py  test_auth_client_transport_errors.py  test_profile_routes.py  test_register_routes.py
services/web/web_service/: auth_client.py  deps.py  main.py  settings.py
services/web/web_service/static/: style.css
services/web/web_service/templates/: admin_agents.html  admin_forbidden.html  admin_invites.html  admin_settings.html  admin_users.html  base.html  dashboard.html  login.html  password.html  profile.html  profile_agents.html  profile_edit.html  register.html
tests/: test_route_prefix_convention.py
tests/common/: test_events.py  test_jwt_verify.py  test_logging.py  test_settings.py
tests/integration/: test_migrations.py  test_self_service_ui.py
