[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-analysis-server"
version = "0.5.0"
description = "Deep Analysis server — AGPL-3.0 open-source core"
requires-python = ">=3.12"
license = {text = "AGPL-3.0-only"}
readme = "README.md"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "redis>=5.0",
    "pyjwt[crypto]>=2.8",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "argon2-cffi>=23.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["common"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["docs/diagrams"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# FastAPI dependencies idiomatically use Depends(...) as a default.
"services/auth/auth_service/main.py" = ["B008"]
"services/auth/auth_service/deps.py" = ["B008"]
"services/auth/auth_service/admin.py" = ["B008"]
"services/ingest/ingest_service/main.py" = ["B008"]
"services/ingest/ingest_service/deps.py" = ["B008"]
"services/web/web_service/main.py" = ["B008"]
"services/web/web_service/deps.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["services/[a-z]+/alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--import-mode=importlib"

[tool.uv.workspace]
members = [
    "common",
    "services/auth",
    "services/ingest",
    "services/parser",
    "services/analytics",
    "services/web",
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
commit_parser = "conventional"
major_on_zero = false
allow_zero_version = true
tag_format = "v{version}"
commit_message = "chore(release): {version} [skip ci]"
build_command = ""

[tool.semantic_release.branches.main]
match = "^(main)$"
prerelease = false

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "build", "ci", "docs", "refactor", "style", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0
parse_squash_commits = true
ignore_merge_commits = true

[tool.semantic_release.publish]
upload_to_vcs_release = false
