[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-analysis-web"
version = "0.4.0.dev0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.2",
    "prometheus-client>=0.20",
]

[tool.hatch.build.targets.wheel]
packages = ["web_service"]
