[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-analysis-web"
version = "0.4.0.dev0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "structlog>=24.2",
    "prometheus-client>=0.20",
    "pydantic-settings>=2.3",
    "pyjwt[crypto]>=2.8",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["web_service"]

[tool.hatch.build.targets.wheel.force-include]
"web_service/templates" = "web_service/templates"
"web_service/static" = "web_service/static"
